# pargrep

./: CMakeLists.txt  README.md
src/: benchmarks.cpp  main.cpp  pargrep.cpp  pargrep.h  regex_functions.cpp  regex_functions.h  scrap.cpp
